<resources>
    <string name="app_name">Calculator</string>
    <string name="_0">0</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="plus">+</string>
    <string name="_1">1</string>
    <string name="sub">-</string>
    <string name="multiply">×</string>
    <string name="point">.</string>
    <string name="equal">=</string>
    <string name="c">C</string>
    <string name="divider">÷</string>
    <string name="delete">DEL</string>
    <string name="percent">%</string>
    <string name="chushi">0</string>
    <string name="mc">mc</string>
    <string name="left">(</string>
    <string name="right">)</string>
    <string name="_1_x">1/x</string>

    <string-array name="spinner">
        <item>二进制</item>
        <item>八进制</item>
        <item>十进制</item>
        <item>十六进制</item>

    </string-array>


</resources>