<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/editText1"
        android:layout_width="389dp"
        android:layout_height="190dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="33dp"
        android:ems="10"
        android:gravity="end|bottom"
        android:hint="@string/chushi"
        android:textSize="70sp" />

    <Button
        android:id="@+id/C"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/button1"
        android:layout_below="@id/editText1"
        android:text="@string/c"
        android:textSize="30sp"
        android:layout_marginTop="40dp"

        />

    <Button
        android:id="@+id/divider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/C"
        android:layout_alignBaseline="@id/C"
        android:textSize="30sp"
        android:text="@string/divider"
        android:layout_marginStart="10dp"
        />
    <Button
        android:id="@+id/multiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/divider"
        android:layout_alignBaseline="@id/divider"
        android:textSize="30sp"
        android:text="@string/multiply"
        android:layout_marginStart="10dp"
        />


    <Button
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/multiply"
        android:layout_alignBaseline="@id/divider"
        android:textSize="30sp"
        android:text="@string/delete"
        android:layout_marginStart="10dp"
        />
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText1"
        android:layout_alignStart="@id/editText1"
        android:layout_marginStart="10dp"
        android:layout_marginTop="100dp"
        android:text="@string/_1"
        android:textSize="30sp" />
    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/button1"
        android:layout_alignBaseline="@id/button1"
        android:layout_marginTop="30dp"
        android:textSize="30sp"
        android:layout_marginStart="10dp"
        android:text="@string/_2"
        />
    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/button2"
        android:layout_alignBaseline="@id/button2"
        android:textSize="30sp"
        android:layout_marginStart="10dp"
        android:text="@string/_3"

        />
    <Button
        android:id="@+id/buttonPlus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/button3"
        android:layout_alignBaseline="@id/button3"
        android:textSize="30sp"
        android:layout_marginStart="10dp"
        android:text="@string/plus"

        />
    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button1"
        android:layout_alignStart="@id/button1"

        android:textSize="30sp"
        android:text="@string/_4"
        />
    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/button4"
        android:layout_alignBaseline="@id/button4"
        android:textSize="30sp"
        android:layout_marginStart="10dp"
        android:text="@string/_5"
        />
    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/button5"
        android:layout_alignBaseline="@id/button5"
        android:layout_marginStart="10dp"
        android:textSize="30sp"
        android:text="@string/_6"
        />
    <Button
        android:id="@+id/buttonSub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/button6"
        android:layout_alignBaseline="@id/button6"
        android:textSize="30sp"
        android:layout_marginStart="10dp"
        android:text="@string/sub"
        />
    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button4"
        android:textSize="30sp"
        android:layout_alignStart="@id/button4"
        android:text="@string/_7"
        />
    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/button7"
        android:layout_alignBaseline="@id/button7"
        android:textSize="30sp"
        android:layout_marginStart="10dp"
        android:text="@string/_8"
        />
    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/button8"
        android:layout_alignBaseline="@id/button8"
        android:textSize="30sp"
        android:layout_marginStart="10dp"
        android:text="@string/_9"
        />
    <Button

        android:id="@+id/equal"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_toEndOf="@id/button9"
        android:layout_alignBaseline="@id/button9"
        android:layout_marginStart="10dp"
        android:textSize="30sp"
        android:text="@string/equal"

        />


    <Button
        android:id="@+id/percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button7"
        android:layout_alignStart="@id/button7"
        android:textSize="30sp"
        android:text="@string/percent"
        />
    <Button
        android:id="@+id/button0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/percent"
        android:layout_alignBaseline="@id/percent"
        android:layout_marginStart="10dp"
        android:text="@string/_0"
        android:textSize="30sp"
        />
    <Button
        android:id="@+id/button."
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/button0"
        android:layout_alignBaseline="@id/button0"
        android:layout_marginStart="10dp"
        android:text="@string/point"
        android:textSize="30sp"
        />



</RelativeLayout>